--- a/keyboard.css
+++ b/keyboard.css
@@ -12,6 +12,8 @@
 .virtual_keyboard_toggle {
   padding: 5px;
   visibility: hidden;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
 .virtual_keyboard {
@@ -26,12 +28,16 @@
 }
 
 .virtual_keyboard_letter_button {
+  border: 1px solid black;
+  border-radius: 5px;
   padding: 5px;
   margin: 2px;
   width: 25px;
 }
 
 .virtual_keyboard_shift_button {
+  border: 1px solid black;
+  border-radius: 5px;
   padding: 5px;
   margin: 2px;
   width: 83px;
