Fix draw ordering issue by appending virtual_keyboard as a direct body child, and using position: fixed

--- a/keyboard.css
+++ b/keyboard.css
@@ -30,9 +30,7 @@
 }
 
 .virtual_keyboard {
-  position: absolute;
-  top: 2px;
-  left: 18px;
+  position: fixed;
 
   background-color: #ffffff;
   border: 1px solid rgb(52, 58, 64);
